--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBT 5112/PBT 5112.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBT 5112/PBT 5112.html
@@ -50,22 +50,21 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>TOYOTA HILUX 4X4 CD</h1>
-            <p class="precio">$8,900</p>
+            <h1> SUZUKI GRAND VITARA SZ 2.0L 5P TM 4X2 FL</h1>
+            <p class="precio">$9,900</p>
             <div class="detalles">
-                <span>1998</span>
-                <span>650 Kms</span>
+                <span>2011</span>
+                <span>183 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto5.jpg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -76,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">TOYOTA</span>
+                    <span class="info-value">SUZUKI</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">HILUX 4X4 CD</span>
+                    <span class="info-value">GRAND VITARA SZ 2.0L 5P TM 4X2 FL</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -88,15 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Doble Cabina</span>
+                    <span class="info-value">SUV</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">650.000 km</span>
+                    <span class="info-value">183.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">1998</span>
+                    <span class="info-value">2011</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -104,7 +103,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Rojo</span>
+                    <span class="info-value">DORADO</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -116,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>Tracción 4x4 indestructible y cabina doble. Ideal para trabajo pesado y off-road</p>
+            <p>SUV compacto con motor 2.0L gasolina y transmisión manual. Versión 4x2 para ciudad, con detalles del facelift 2011</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -126,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/adsa.mp4" type="video/mp4">
+                        <source src="imgs/2011.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -181,11 +180,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">0 Multas</span>
+                    <span class="dato-value">1 Multa</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$00.00</span>
+                    <span class="dato-value">$138.00</span>
                 </div>
             </div>
         </div>
@@ -199,11 +198,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$32.35</span>
+                    <span class="dato-value">$25.49</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">GAD SANTO DOMINGO</span>
+                    <span class="dato-value">GAD JUNIN MANABI</span>
                 </div>
             </div>
         </div>
@@ -217,7 +216,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$36.00</span>
+                    <span class="dato-value">$266.00</span>
                 </div>
             </div>
         </div>
@@ -241,7 +240,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">3 dueños</span>
+                    <span class="dato-value">6 dueños</span>
                 </div>
             </div>
         </div>
