--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBA 8118/PBA 8118.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBA 8118/PBA 8118.html
@@ -50,21 +50,21 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>FIAT STRADA FIRE 1242 MPI 8V CB CORTA</h1>
-            <p class="precio">$3,900</p>
+            <h1>CHEVROLET AVEO ACTIVO 1.4L 4P STD</h1>
+            <p class="precio">$5,900</p>
             <div class="detalles">
-                <span>2004</span>
-                <span>330.000 Kms</span>
-                <span>Placa: A</span>
+                <span>2008</span>
+                <span>??? Kms</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -75,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">fiat</span>
+                    <span class="info-value">CHEVROLET</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">STRADA FIRE 1242 MPI 8V CB CORTA</span>
+                    <span class="info-value">AVEO ACTIVO 1.4L 4P STD</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -87,15 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Pickup</span>
+                    <span class="info-value">Sedán</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">330.000 km</span>
+                    <span class="info-value">??? km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2004</span>
+                    <span class="info-value">2008</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -115,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>La Fiat Strada 1.2 Fire 2004 es una pickup compacta con motor 1.2L 8V (73 HP), transmisión manual y cabina corta (CB). Ideal para carga ligera y uso urbano, destaca por su bajo consumo y mantenimiento económico.</p>
+            <p>El Chevrolet Aveo Activo 1.4L 4P STD 2008 es un automóvil compacto de cuatro puertas, con un motor de 1.4 litros y transmisión manual. Ofrece un espacio interior suficiente para cuatro adultos y un maletero adecuado para viajes familiares.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/fiat.mp4" type="video/mp4">
+                        <source src="imgs/adada.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -161,9 +161,6 @@
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
                         </a>
-                        <a href="https://wa.me/593992509493" class="btn-contacto" target="_blank">
-                            <i class="bi bi-whatsapp"></i> ASESOR ISRAEL
-                        </a>
 <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
     <i class="bi bi-shield-fill-exclamation"></i> Consultas (solo personal autorizado)
@@ -180,11 +177,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">1 multa</span>
+                    <span class="dato-value">0 multa</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$80.00</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -198,11 +195,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$126.34</span>
+                    <span class="dato-value">$101.35</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Puerto Quito</span>
+                    <span class="dato-value">GAD RIOBAMBA</span>
                 </div>
             </div>
         </div>
@@ -216,7 +213,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$171.00</span>
                 </div>
             </div>
         </div>
@@ -240,7 +237,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">8 dueños</span>
+                    <span class="dato-value">4 dueños</span>
                 </div>
             </div>
         </div>
