--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PYT 0407/PYT 0407.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PYT 0407/PYT 0407.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>SUZUKI GRAND VITARA SZ 2.0L 5P TM 4X2</h1>
-            <p class="precio">$8,900</p>
+            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
+            <p class="precio">$6,900</p>
             <div class="detalles">
-                <span>2010</span>
-                <span>Placa: P</span>
+                <span>2012</span>
+                <span>Placa: A</span>
             </div>
         </div>
 
@@ -63,7 +63,6 @@
             <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
@@ -75,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">SUZUKI</span>
+                    <span class="info-value">HYUNDAI</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">GRAND VITARA SZ 2.0L 5P TM 4X2</span>
+                    <span class="info-value">I10 CM 5DR 1.1</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -87,11 +86,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">SUV</span>
+                    <span class="info-value">sedan</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2010</span>
+                    <span class="info-value">2012</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -99,7 +98,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">ROJO</span>
+                    <span class="info-value">Plateado</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -111,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Suzuki Grand Vitara SZ 2.0L 5P 4×2 TM 2010 es un SUV (todoterreno) de cinco puertas con tracción delantera, motor 2.0 litros a gasolina, y transmisión manual. Ofrece una combinación sólida de espacio interior, fiabilidad mecánica y buen rendimiento para uso urbano y familiar.</p>
+            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -121,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/ASDQW.mp4" type="video/mp4">
+                        <source src="imgs/I10.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -198,11 +197,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$00.00</span>
+                    <span class="dato-value">$74.22</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito</span>
+                    <span class="dato-value">Quito - Bicentenario</span>
                 </div>
             </div>
         </div>
@@ -240,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">2 dueños</span>
+                    <span class="dato-value">4 dueños</span>
                 </div>
             </div>
         </div>
